--- a/FL11_HW10/homework/index.html
+++ b/FL11_HW10/homework/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Data types</title>
+  <title>Scope & Context</title>
 </head>
 <body>
   <script src="js/fighters_game.js"></script>
