homework 13: added changes to html and less

--- a/FL11_HW13_css-frameworks/index.html
+++ b/FL11_HW13_css-frameworks/index.html
@@ -41,7 +41,7 @@
                 <hr class="mb-4 mt-0" />
                 <div class="row">
                     <div class="col-lg-8">
-                        <img src="img/yoga.jpg" width="100%" alt="yoga" />
+                        <img src="img/yoga.jpg" alt="yoga" />
                     </div>
                     <div class="col-lg-4">
                         <h3 class="mt-4">Class description</h3>
