Added attribute type to script tag and modified title in html.

--- a/FL_11_24_homework_js-modules/src/index.html
+++ b/FL_11_24_homework_js-modules/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Homework 19. Rock, Paper or Scissors</title>
+  <title>Homework 24. Rock, Paper or Scissors</title>
   <link href="css/styles.css" rel="stylesheet" type="text/css">
 </head>
 
@@ -27,6 +27,6 @@
   </div>
   <div id="result"></div>
 </main>
-<script src="js/app.js"></script>
+<script type="type/javascript" src="js/app.js"></script>
 </body>
 </html>
