--- a/FL_11_26_homework_jQuery/task2/index.html
+++ b/FL_11_26_homework_jQuery/task2/index.html
@@ -20,23 +20,16 @@
 
     <h2>Todo List</h2>
     <ul class="list">
-      <li class="item">
-        <span class="item-text">Buy milk</span>
-        <button class="item-remove">Remove</button>
-      </li>
-      <li class="item">
-        <span class="item-text done">Play with dog</span>
-        <button class="item-remove">Remove</button>
-      </li>
+      
     </ul>
 
-    <!-- <hr>
+    <hr>
     <div class="amount">
       <p>Done: <span class="done total">0</span>; <br>
         In progress: <span class="in-progress">0</span>; <br>
         <b>Total: <span some-attr>0</span></b>
       </p>
-    </div> -->
+    </div>
   </div>
 
 
