Fixed bugs in task 2.

--- a/FL_11_26_homework_jQuery/task2/index.html
+++ b/FL_11_26_homework_jQuery/task2/index.html
@@ -25,9 +25,9 @@
 
     <hr>
     <div class="amount">
-      <p>Done: <span class="done total">0</span>; <br>
+      <p>Done: <span class="items-done">0</span>; <br>
         In progress: <span class="in-progress">0</span>; <br>
-        <b>Total: <span some-attr>0</span></b>
+        <b>Total: <span class="total">0</span></b>
       </p>
     </div>
   </div>
